--- a/index.html
+++ b/index.html
@@ -26,37 +26,49 @@
         </div>
         <div class="tasks flex jc-sa wrap gap">
             <div class="card">
+              <a href="./index2.html">
               <p class="card-title title-border inside-space">Trip to Paris</p>
+            </a>
               <p class="inside-space card-body">Completed task</p>
               <input type="checkbox" />
               <label for="check">Pending Task</label>
             </div>
             <div class="card">
+              <a href="./index2.html">
               <p class="card-title title-border inside-space">Trip to Paris</p>
+            </a>
               <p class="inside-space card-body">Completed task</p>
               <input type="checkbox" />
               <label for="check">Pending Task</label>
             </div>
             <div class="card">
+              <a href="./index2.html">
               <p class="card-title title-border inside-space">Trip to Paris</p>
+            </a>
               <p class="inside-space card-body">Completed task</p>
               <input type="checkbox" />
               <label for="check">Pending Task</label>
             </div>
             <div class="card">
+              <a href="./index2.html">
               <p class="card-title title-border inside-space">Trip to Paris</p>
+            </a>
               <p class="inside-space card-body">Completed task</p>
               <input type="checkbox" />
               <label for="check">Pending Task</label>
             </div>
             <div class="card">
+              <a href="./index2.html">
               <p class="card-title title-border inside-space">Trip to Paris</p>
+            </a>
               <p class="inside-space card-body">Completed task</p>
               <input type="checkbox" />
               <label for="check">Pending Task</label>
             </div>
             <div class="card">
+              <a href="./index2.html">
               <p class="card-title title-border inside-space">Trip to Paris</p>
+            </a>
               <p class="inside-space card-body">Completed task</p>
               <input type="checkbox" />
               <label for="check">Pending Task</label>
